tests/should_fail/unary_neg_no_overload.luma
let v = {}
let res = -v
res
